--- a/boton.css
+++ b/boton.css
@@ -1,12 +1,27 @@
 @import url('https://fonts.googleapis.com/css2?family=Roboto+Mono:ital,wght@0,100..700;1,100..700&display=swap');
-@import url(formularioentrada.css);
-@import url(lista.css);
+@import url(card.css);
+@import url(boton.css);
 @import url(cuatro.css);
+@import url(menuprincipal.css);
+@import url(lista.css);
 
 .btn {
   padding: 10px 20px;
   border: none;
   border-radius: 4px;
+}
+.pajaro{
+  text-align: center;
+  margin-top: 400px;
+  background-image: url(jake.gif);
+  background-color: white;
+background-position: center;
+background-size: cover;
+box-sizing: border-box;
+padding: 20px;
+margin: 0;
+height: 100vh;
+background-attachment: fixed;
 }
 
 .btn--primary {
@@ -20,7 +35,11 @@
 }
 
 .btn--disabled {
-  opacity: 0.5;
+  opacity: 0.9;
+}
+
+.btn--uno{
+  margin-right: 150px;
 }
 
 
@@ -41,7 +60,11 @@
 }
 
 .jpg--disabled {
-  opacity: 0.5;
+  opacity: 0.9;
+}
+
+.jpg--uno{
+  margin-right: 150px;
 }
 
 
@@ -63,11 +86,14 @@
 }
 
 .mvp--disabled {
-  opacity: 0.5;
+  opacity: 0.9;
+}
+.mvp--uno{
+  margin-right: 150px;
 }
 
 
-.btn {
+.np {
   padding: 10px 20px;
   border: none;
   border-radius: 4px;
@@ -80,9 +106,10 @@
 
 .np--large {
   font-size: 18px;
-  padding: 15px 30px;
+  padding: 10px 26px;
 }
 
 .np--disabled {
-  opacity: 0.5;
+  opacity: 0.9;
 }
+
