--- a/card.css
+++ b/card.css
@@ -50,6 +50,7 @@ transition:all 1s ease-in-out;
   padding: 20px;
   background-color: #865c53;
   width: 450px;
+  /* cursor: pointegir; */
 }
 
 .mvp--shadow {
